--- a/index.html
+++ b/index.html
@@ -4,36 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Simple Horizontal Menu</title>
-<style>
-  /* Style the menu */
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #333; /* Background color of the menu */
-  }
-
-  li {
-    float: left;
-  }
-
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-
-  /* Change the link color on hover */
-  li a:hover {
-    background-color: #111;
-  }
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<!-- The menu -->
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#about">About</a></li>
