--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,10 @@
 <body>
 
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#services">Services</a></li>
-  <li><a href="#contact">Contact</a></li>
+  <li><a href="#inicio">Home</a></li>
+  <li><a href="#sobre">About</a></li>
+  <li><a href="#serviços">Services</a></li>
+  <li><a href="#contatos">Contact</a></li>
 </ul>
 
 </body>
