--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menu Horizontal</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Horizontal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<ul>
-  <li><a href="#inicio">Home</a></li>
-  <li><a href="#sobre">About</a></li>
-  <li><a href="#serviços">Services</a></li>
-  <li><a href="#contatos">Contact</a></li>
-</ul>
-
+    <div class="menu">
+        <a href="#" class="menu-item">Inicio</a>
+        <a href="#" class="menu-item">Sobre</a>
+        <a href="#" class="menu-item">Serviços</a>
+        <a href="#" class="menu-item">Contatos</a>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
